--- a/Analyses/Links sample only/links.Rmd
+++ b/Analyses/Links sample only/links.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Manually labelled sample + links with word embeddings"
+title: "Only sample with links"
 author: "Siri Frisli"
 output:
   html_notebook:
@@ -30,39 +30,23 @@ for (package in packages){
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Loading and preprocessing data
+# Loading pre-processed data
 ```{r}
-covid <- read_xlsx("E:/Data/Training samples/misinformation_labeled.xlsx")
+covid <-readRDS("E:/Data/covid_links_sample.RDS")
 covid <- covid |>
   rename(tweet = text) |>
-  select(-c(claim, description, fact_check, date))
+  select(-conversation_id)
 
 covid$label <- case_when(
   covid$label == 0 ~ "non.misinfo",
   covid$label == 1 ~ "misinfo"
 )
 
+covid$label <- as.factor(covid$label)
+
 stopwords <- read_xlsx("~/INORK/Processing/stopwords.xlsx")
 custom_words <- stopwords |>
   pull(word)
-```
-
-```{r}
-removeURL <- function(tweet) {
-  return(gsub("http\\S+", "", tweet))
-}
-
-removeUsernames <- function(tweet) {
-  return(gsub("@[a-z,A-Z,_]*[0-9]*[a-z,A-Z,_]*[0-9]*", "", tweet))
-}
-
-covid$tweet <- apply(covid["tweet"], 1, removeURL)
-covid$tweet <- apply(covid["tweet"], 1, removeUsernames)
-
-covid$label <- as.factor(covid$label) # Outcome variable needs to be factor
-covid$tweet <- tolower(covid$tweet)
-covid$tweet <- gsub("[[:punct:]]", " ", covid$tweet)
-# covid$tweet <- str_replace_all(covid$tweet, "[0-9]", "")
 ```
 
 The splits:
@@ -77,55 +61,6 @@ Checking the balance of the training data:
 ```{r}
 train |>
   count(label)
-```
-Need to add about 700 observations to make the training data balanced
-
-## Adding data
-```{r}
-covid_links <- readRDS("E:/Data/covid_misinfo_links_only.RDS")
-covid_links <- covid_links |>
-  rename(tweet = text)
-
-covid_links$label <- case_when(
-  covid_links$label == 0 ~ "non.misinfo",
-  covid_links$label == 1 ~ "misinfo"
-)
-```
-
-```{r}
-covid_links$tweet <- apply(covid_links["tweet"], 1, removeURL)
-covid_links$tweet <- apply(covid_links["tweet"], 1, removeUsernames)
-
-covid_links$label <- as.factor(covid_links$label) # Outcome variable needs to be factor
-covid_links$tweet <- tolower(covid_links$tweet)
-covid_links$tweet <- gsub("[[:punct:]]", " ", covid_links$tweet)
-```
-
-```{r}
-covid_links <- covid_links |>
-  select(-dom_url) |>
-  sample_n(700, seed = 321)
-
-train_full <- rbind(covid_links, train)
-
-train_full <- train_full |>
-  select(-conversation_id)
-
-train <- train_full
-```
-
-```{r}
-train |>
-  count(label)
-```
-Now the classes are balanced
-
-```{r}
-# saveRDS(train, "E:/Data/manual_links_TRAINING_sample.RDS")
-# train<- readRDS("E:/Data/manual_links_TRAINING_sample.RDS")
-
-# saveRDS(test, "E:/Data/manual_links_TEST_sample.RDS")
-# test <- readRDS("E:/Data/manual_links_TEST_sample.RDS")
 ```
 
 Initializing spacyr environment and loading the pre-trained word embeddings (norwegian bokmål)
@@ -170,9 +105,9 @@ test_svm <- new_test |>
   bind_cols(predict(svm_model, new_test))
 
 cm_svm_test <- confusionMatrix(table(new_test$label, test_svm$...302)) 
-cm_svm_test$byClass["F1"] # 0.8643216  
-cm_svm_test$byClass["Precision"] # 0.877551  
-cm_svm_test$byClass["Recall"] # 0.8514851  
+cm_svm_test$byClass["F1"] # 0.9083527   
+cm_svm_test$byClass["Precision"] # 0.90625   
+cm_svm_test$byClass["Recall"] # 0.9104651   
 ```
 
 ```{r}
@@ -183,6 +118,13 @@ new_test |>
 ```
 
 ## SVM tuning
+
+```{r}
+svmTune <- tune(svm, train.x = label~., data = new_train, kernel='radial',
+                ranges=list(cost=10^(-3:3), gamma=seq(0, 10, 1)))
+```
+
+
 ```{r}
 set.seed(1234)
 svm_tune <- tune.svm(x = label ~., 
@@ -191,8 +133,8 @@ svm_tune <- tune.svm(x = label ~.,
                      cost = seq(1,10, by = 1),  
                      kernel = "radial")
 
-svm_tune$best.parameters$gamma # 0.001
-svm_tune$best.parameters$cost # 4
+svm_tune$best.parameters$gamma # 
+svm_tune$best.parameters$cost # 
 ```
 
 ```{r}
@@ -203,8 +145,8 @@ svm_tune <- tune.svm(x = label ~.,
                      cost = seq(3,5, by = 0.5),  
                      kernel = "radial")
 
-svm_tune$best.parameters$gamma # 0.001
-svm_tune$best.parameters$cost # 4.5
+svm_tune$best.parameters$gamma # 
+svm_tune$best.parameters$cost # 
 ```
 
 ```{r}
@@ -224,9 +166,9 @@ model_svm <- new_test |>
   bind_cols(predict(svm_model, new_test))
 
 cm_svm <- confusionMatrix(table(new_test$label, model_svm$...302)) 
-cm_svm$byClass["F1"] # 0.25   
-cm_svm$byClass["Precision"] # 0.3333333   
-cm_svm$byClass["Recall"] # 0.2   
+cm_svm$byClass["F1"] #    
+cm_svm$byClass["Precision"] #    
+cm_svm$byClass["Recall"] #    
 ```
 ```{r}
 new_test |>
@@ -292,9 +234,9 @@ lr_preds <- test |>
   bind_cols(predict(lr_final_fit, test))
 
 cm_lr <- confusionMatrix(table(test$label, lr_preds$.pred_class)) 
-cm_lr$byClass["F1"] # 0.1702128   
-cm_lr$byClass["Precision"] # 0.2666667   
-cm_lr$byClass["Recall"] # 0.125  
+cm_lr$byClass["F1"] # 0.8865979  
+cm_lr$byClass["Precision"] # 0.8958333 
+cm_lr$byClass["Recall"] # 0.877551 
 ```
 
 ```{r}
@@ -302,6 +244,7 @@ test |>
   bind_cols(predict(lr_final_fit, test)) |>
   conf_mat(truth = label, estimate = .pred_class) |> 
   autoplot(type = "heatmap") 
+
 ```
 
 # Gradient Boosted Trees
