--- a/self-training_1.Rmd
+++ b/self-training_1.Rmd
@@ -31,12 +31,38 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 Loading the data
-Using a datasets that's already been preprocessed a bit
 ```{r}
-covid <- readRDS("D:/Data/manual_links_sample.RDS")
-stopwords <- read_xlsx("~/INORK/INORK_R/Processing/stopwords.xlsx")
+covid <- read_xlsx("E:/Data/Training samples/misinformation_labeled.xlsx")
+
+stopwords <- read_xlsx("~/INORK/Processing/stopwords.xlsx")
 custom_words <- stopwords |>
   pull(word)
+
+covid <- covid |>
+  select(tweet = text, label, id)
+
+covid$label <- case_when(
+  covid$label == 0 ~ "non.misinfo",
+  covid$label == 1 ~ "misinfo"
+)
+```
+
+```{r}
+removeURL <- function(tweet) {
+  return(gsub("http\\S+", "", tweet))
+}
+
+removeUsernames <- function(tweet) {
+  return(gsub("@[a-z,A-Z,_]*[0-9]*[a-z,A-Z,_]*[0-9]*", "", tweet))
+}
+
+covid$tweet <- apply(covid["tweet"], 1, removeURL)
+covid$tweet <- apply(covid["tweet"], 1, removeUsernames)
+
+covid$label <- as.factor(covid$label) # Outcome variable needs to be factor
+covid$tweet <- tolower(covid$tweet)
+covid$tweet <- gsub("[[:punct:]]", " ", covid$tweet)
+# covid$tweet <- str_replace_all(covid$tweet, "[0-9]", "")
 ```
 
 Creating the splits:
@@ -50,11 +76,10 @@ test <- testing(covid_split)
 Initializing spacyr environment and loading the pre-trained word embeddings (norwegian bokmål)
 ```{r}
 spacy_initialize(model = "nb_core_news_sm")
-no_we <- read.table("C:/Users/sirifris.ADA/OneDrive - OsloMet/Dokumenter/no.wiki.bpe.vs50000.d200.w2v.txt", 
-                    header = FALSE, sep = " ", quote = "", encoding = "UTF-8")
+no_we <- fread("~/SVM_ST/model.txt", 
+                    skip = 1, header = FALSE, sep = " ", quote = "", encoding = "UTF-8")
 no_we <- no_we |>
   as_tibble()
-no_we$V1 <- gsub("▁", "", no_we$V1)
 ```
 
 # Recipe
@@ -73,6 +98,12 @@ new_train <- bake(covid_recipe, new_data = train)
 new_test <- bake(covid_recipe, new_data = test)
 ```
 
+Calculating the class weights, with the inverse class frequency method
+```{r}
+841/(table(train$label)[1] * 2)
+841/(table(train$label)[2] * 2)
+```
+
 # First SVM
 ```{r}
 set.seed(1234)
@@ -81,8 +112,7 @@ svm_model <- svm(formula = label~.,
                  type = "C-classification",
                  kernel = "radial",
                  cross = 5,
-                 gamma = 0.001,
-                 cost = 3.5,
+                 class.weights = c("misinfo" = 6.570312, "non.misinfo" = 0.541184),
                  probability = TRUE)
 ```
 
@@ -90,15 +120,15 @@ svm_model <- svm(formula = label~.,
 model_svm <- new_test |>
   bind_cols(predict(svm_model, new_test))
 
-cm_svm <- confusionMatrix(table(new_test$label, model_svm$...202)) 
-cm_svm$byClass["F1"] # 0.7281324  
-cm_svm$byClass["Precision"] # 0.7857143  
-cm_svm$byClass["Recall"] # 0.6784141  
+cm_svm <- confusionMatrix(table(new_test$label, model_svm$...302)) 
+cm_svm$byClass["F1"] # 0.2857143    
+cm_svm$byClass["Precision"] # 0.3333333    
+cm_svm$byClass["Recall"] # 0.25    
 ```
 
 # Loading and preprocessing full dataset
 ```{r}
-covid_df <- readRDS("D:/Data/covid_relevant_nort_domain.RDS")
+covid_df <- readRDS("E:/Data/covid_relevant_nort_domain.RDS")
 
 match <- subset(covid, (covid$id %in% covid_df$id))
 covid_df <- covid_df |>
@@ -141,14 +171,14 @@ covid_df_pred_probs <- covid_df_pred_probs |>
 ```{r}
 covid_pred_df <- bind_cols(covid_df, covid_df_pred_probs)
 covid_pred_df <- covid_pred_df |>
-  filter(non.misinfo > 0.98 | misinfo > 0.9)
+  filter(non.misinfo > 0.9 | misinfo > 0.9)
 ```
 
 ```{r}
 covid_pred_df_label <- covid_pred_df |>
   mutate(label = case_when(
     misinfo > 0.9 ~ "misinfo",
-    non.misinfo > 0.98 ~ "non.misinfo"
+    non.misinfo > 0.9 ~ "non.misinfo"
   ))
 ```
 
