--- a/Analyses/Manual sample, no weights/manual_no_weights.Rmd
+++ b/Analyses/Manual sample, no weights/manual_no_weights.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 covid <- read_xlsx("D:/Data/Training samples/misinformation_labeled.xlsx")
 
-stopwords <- read_xlsx("~/INORK/INORK_R/Processing/stopwords.xlsx")
+stopwords <- read_xlsx("~/INORK_R/Processing/stopwords.xlsx")
 custom_words <- stopwords |>
   pull(word)
 
@@ -81,7 +81,7 @@ train |>
 Initializing spacyr environment and loading the pre-trained word embeddings
 ```{r}
 spacy_initialize(model = "nb_core_news_sm")
-no_we <- fread("~/INORK/SVM_ST/model.txt", 
+no_we <- fread("~/SVM_ST/model_1.txt", 
                     skip = 1, header = FALSE, sep = " ", quote = "", encoding = "UTF-8")
 no_we <- no_we |>
   as_tibble()
@@ -119,7 +119,7 @@ svm_model <- svm(formula = label~.,
 model_svm <- new_test |>
   bind_cols(predict(svm_model, new_test))
 
-cm_svm <- confusionMatrix(table(new_test$label, model_svm$...302)) 
+cm_svm <- confusionMatrix(table(new_test$label, model_svm$...102)) 
 cm_svm$byClass["F1"] # NAs    
 cm_svm$byClass["Precision"] #   
 cm_svm$byClass["Recall"] #
@@ -153,7 +153,7 @@ svm_model <- svm(formula = label~.,
 model_svm <- new_test |>
   bind_cols(predict(svm_model, new_test))
 
-cm_svm <- confusionMatrix(table(new_test$label, model_svm$...302)) 
+cm_svm <- confusionMatrix(table(new_test$label, model_svm$...102)) 
 cm_svm$byClass["F1"] # Nas    
 cm_svm$byClass["Precision"] #   
 cm_svm$byClass["Recall"] # 
@@ -162,20 +162,14 @@ cm_svm$byClass["Recall"] #
 ```{r}
 new_test |>
   bind_cols(predict(svm_model, new_test)) |>
-  conf_mat(truth = label, estimate = ...302) |>
+  conf_mat(truth = label, estimate = ...102) |>
   autoplot(type = "heatmap")
 ```
 
 # Recipe: logistic reg and gradient boosted trees
-## Weights
-```{r}
-train <- train |>
-  mutate(case_wts = ifelse(label == "misinfo", 6.570312 ,0.541184 ),
-         case_wts = importance_weights(case_wts))
-```
 
 ```{r}
-model_recipe <- recipe(label~tweet+case_wts, data = train) |>
+model_recipe <- recipe(label~tweet, data = train) |>
   step_tokenize(tweet, engine = "spacyr") |>
   step_stopwords(tweet, language = "no", keep = FALSE, 
                  stopword_source = "snowball", 
@@ -227,9 +221,9 @@ lr_preds <- test |>
   bind_cols(predict(lr_final_fit, test))
 
 cm_lr <- confusionMatrix(table(test$label, lr_preds$.pred_class)) 
-cm_lr$byClass["F1"] # 0.2
-cm_lr$byClass["Precision"] # 0.1333333
-cm_lr$byClass["Recall"] # 0.4
+cm_lr$byClass["F1"] # 0.1176471 
+cm_lr$byClass["Precision"] # 0.06666667 
+cm_lr$byClass["Recall"] # 0.5 
 ```
 
 ```{r}
@@ -289,9 +283,9 @@ bt_preds <- test |>
   bind_cols(predict(bt_final_fit, test))
 
 cm_bt <- confusionMatrix(table(test$label, bt_preds$.pred_class)) 
-cm_bt$byClass["F1"] # Nas 
-cm_bt$byClass["Precision"] # 
-cm_bt$byClass["Recall"] #  
+cm_bt$byClass["F1"] # 0.1 
+cm_bt$byClass["Precision"] # 0.06666667 
+cm_bt$byClass["Recall"] # 0.2 
 ```
 
 ```{r}
