--- a/self-training_3.Rmd
+++ b/self-training_3.Rmd
@@ -13,7 +13,7 @@ output:
 
 ```{r setup, include = FALSE}
 packages <- c("tidyverse", "tidymodels", "readxl", "ROSE", "recipes", "textrecipes",
-              "e1071", "caret", "glmnet", "spacyr", "textdata", "xgboost")
+              "e1071", "caret", "glmnet", "spacyr", "textdata", "xgboost", "data.table")
  
 for (package in packages) {
   if (!require(package, character.only = TRUE)) {
@@ -33,7 +33,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Loading the data, this has already gone through one round of classification
 ```{r}
 covid <- readRDS("D:/Data/Training samples/misinformation_class_2.RDS")
-stopwords <- read_xlsx("~/INORK/INORK_R/Processing/stopwords.xlsx")
+stopwords <- read_xlsx("~/INORK_R/Processing/stopwords.xlsx")
 custom_words <- stopwords |>
   pull(word)
 ```
@@ -49,118 +49,99 @@ test <- testing(covid_split)
 Initializing spacyr environment and loading the pre-trained word embeddings (norwegian bokmål)
 ```{r}
 spacy_initialize(model = "nb_core_news_sm")
-no_we <- read.table("C:/Users/sirifris.ADA/OneDrive - OsloMet/Dokumenter/no.wiki.bpe.vs50000.d200.w2v.txt", 
-                    header = FALSE, sep = " ", quote = "", encoding = "UTF-8")
+no_we <- fread("~/INORK/SVM_ST/model_1.txt", 
+                    skip = 1, header = FALSE, sep = " ", quote = "", encoding = "UTF-8")
 no_we <- no_we |>
   as_tibble()
-no_we$V1 <- gsub("▁", "", no_we$V1)
 ```
 
 # Recipe
+Calculate and add weights 
 ```{r}
-covid_recipe <- recipe(label~tweet, data = train) |>
+21971/(table(train$label)[1] * 2)
+21971/(table(train$label)[2] * 2)
+```
+
+```{r}
+train <- train |>
+  mutate(case_wts = ifelse(label == "misinfo", 4.932869, 0.5563969),
+         case_wts = importance_weights(case_wts))
+```
+
+```{r}
+model_recipe <- recipe(label~tweet+case_wts, data = train) |>
   step_tokenize(tweet, engine = "spacyr") |>
   step_stopwords(tweet, language = "no", keep = FALSE, 
                  stopword_source = "snowball", 
                  custom_stopword_source = custom_words) |>
   step_lemma(tweet) |>
   step_word_embeddings(tweet, embeddings = no_we) |>
-  step_normalize(all_numeric_predictors()) |>
-  prep()
+  step_normalize(all_numeric_predictors())
 
-new_train <- bake(covid_recipe, new_data = train)
-new_test <- bake(covid_recipe, new_data = test)
+model_recipe
 ```
 
-# SVM
-Checking the default model first
+# Logistic regression
 ```{r}
-set.seed(1234)
-svm_model <- svm(formula = label~.,
-                 data = new_train,
-                 type = "C-classification",
-                 kernel = "radial",
-                 cross = 5,
-                 probability = TRUE)
+lr_spec <- logistic_reg(penalty = tune(), mixture = 1) |>
+  set_mode("classification") |>
+  set_engine("glmnet")
 ```
 
 ```{r}
-model_svm <- new_test |>
-  bind_cols(predict(svm_model, new_test))
-
-cm_svm <- confusionMatrix(table(new_test$label, model_svm$...202)) 
-cm_svm$byClass["F1"] # 0.7821229   
-cm_svm$byClass["Precision"] # 0.7984791   
-cm_svm$byClass["Recall"] # 0.7664234   
-```
-
-## Tuning
-```{r}
-set.seed(1234)
-svm_tune <- tune.svm(x = label ~., 
-                     data = new_train,
-                     gamma = 10^(-3:3), 
-                     cost = seq(1,10, by = 1),  
-                     kernel = "radial")
-
-svm_tune$best.parameters$gamma # 0.001
-svm_tune$best.parameters$cost # 6
+lr_workf <- workflow() |>
+  add_model(lr_spec) |>
+  add_recipe(model_recipe) |>
+  add_case_weights(case_wts)
+lr_workf
 ```
 
 ```{r}
-set.seed(1234)
-svm_tune <- tune.svm(x = label ~., 
-                     data = new_train,
-                     gamma = c(0.001, 0.005, 0.01, 0.05, 0.1, 0.5), 
-                     cost = seq(5,7, by = 0.5),  
-                     kernel = "radial")
-
-svm_tune$best.parameters$gamma # 0.001
-svm_tune$best.parameters$cost # 6
-```
-## Finished model
-```{r}
-set.seed(1234)
-svm_model <- svm(formula = label~.,
-                 data = new_train,
-                 type = "C-classification",
-                 kernel = "radial",
-                 cross = 5,
-                 gamma = svm_tune$best.parameters$gamma,
-                 cost = svm_tune$best.parameters$cost,
-                 probability = TRUE)
+set.seed(8008)
+folds <- vfold_cv(train, strata = label, v = 5, repeats = 2)
+grid <- tibble(penalty = 10^seq(-3, 0, length.out = 20))
+cls_metric <- metric_set(yardstick::precision, yardstick::recall, yardstick::f_meas)
 ```
 
 ```{r}
-model_svm <- new_test |>
-  bind_cols(predict(svm_model, new_test))
-
-cm_svm <- confusionMatrix(table(new_test$label, model_svm$...202)) 
-cm_svm$byClass["F1"] # 0.7721281  
-cm_svm$byClass["Precision"] # 0.7794677  
-cm_svm$byClass["Recall"] # 0.7649254  
+set.seed(1)
+lr_res <- lr_workf |>
+  tune_grid(resamples = folds, grid = grid, metrics = cls_metric)
 ```
 
 ```{r}
-new_test |>
-  bind_cols(predict(svm_model, new_test)) |>
-  conf_mat(truth = label, estimate = ...202) |>
-  autoplot(type = "heatmap")
+lr_params <- select_best(lr_res, metric = "f_meas")
+
+lr_final_workf <- lr_workf |>
+  finalize_workflow(lr_params)
+```
+
+```{r}
+set.seed(2)
+lr_final_fit <- fit(lr_final_workf, train)
+
+lr_preds <- test |>
+  bind_cols(predict(lr_final_fit, test))
+
+cm_lr <- confusionMatrix(table(test$label, lr_preds$.pred_class)) 
+cm_lr$byClass["F1"] # 0.9707823 
+cm_lr$byClass["Precision"] # 0.9961315 
+cm_lr$byClass["Recall"] # 0.9466912 
 ```
 
 # Loading and preprocessing full dataset
 ```{r}
 covid_df <- readRDS("D:/Data/covid_relevant_nort_domain.RDS")
 
-match <- subset(covid, (covid$id %in% covid_df$id))
+# match <- subset(covid, (covid$id %in% covid_df$id))
 covid_df <- covid_df |>
-  anti_join(match, by = "id") |>
+ # anti_join(match, by = "id") |>
   rename(tweet = text)
 ```
 
 ```{r}
 covid_df <- covid_df |>
-  sample_n(50000, seed = 345)
+  sample_n(300000, seed = 700)
 ```
 
 ```{r}
@@ -180,43 +161,44 @@ covid_df$tweet <- gsub("[[:punct:]]", " ", covid_df$tweet)
 # covid_df$tweet <- str_replace_all(covid_df$tweet, "[0-9]", "")
 ```
 
-## SVM on the new sample
+## Logistic regression on the new sample
 ```{r}
-covid_df_baked <- bake(covid_recipe, new_data = covid_df)
-
-covid_df_pred <- predict(svm_model, covid_df_baked, probability = TRUE)
-covid_df_pred_probs <- attr(covid_df_pred, "probabilities")
-covid_df_pred_probs <- covid_df_pred_probs |>
-  as.data.frame()
+set.seed(123)
+lr_preds_all <- covid_df |>
+  bind_cols(predict(lr_final_fit, covid_df, type = "prob"))
 ```
 
 ```{r}
-covid_pred_df <- bind_cols(covid_df, covid_df_pred_probs)
-covid_pred_df <- covid_pred_df |>
-  filter(non.misinfo > 0.98 | misinfo > 0.9)
+lr_preds_all_filtered <- lr_preds_all |>
+  filter(.pred_misinfo > 0.9 | .pred_non.misinfo > 0.9)
 ```
 
 ```{r}
-covid_pred_df_label <- covid_pred_df |>
+lr_preds_all_filtered_label <- lr_preds_all_filtered |>
   mutate(label = case_when(
-    misinfo > 0.9 ~ "misinfo",
-    non.misinfo > 0.98 ~ "non.misinfo"
+    .pred_misinfo > 0.9 ~ "misinfo",
+    .pred_non.misinfo > 0.9 ~ "non.misinfo"
   ))
 ```
 
 ```{r}
-covid_pred_df_label <- covid_pred_df_label |>
-  select(tweet, label, id, conversation_id)
+lr_preds_all_filtered_label <- lr_preds_all_filtered_label |>
+  select(tweet, label, id)
 ```
 
 ```{r}
-covid_pred_df_label |>
+lr_preds_all_filtered_label |>
   count(label)
 ```
 
 Merging the two datasets and saving it as a new training sample
 ```{r}
-covid_predicted <- full_join(covid, covid_pred_df_label)
+# match <- subset(covid, (covid$id %in% lr_preds_all_filtered_label$id))
+
+covid_predicted <- full_join(lr_preds_all_filtered_label, covid, by = "id") |>
+  mutate(label = coalesce(label.x, label.y),
+         tweet = coalesce(tweet.x, tweet.y)) |>
+  select(tweet, label, id)
 
 covid_predicted |>
   count(label)
